k8s/ambient/dep-depend/05-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public-gw
  namespace: grpc-mesh-demo
spec:
  gatewayClassName: istio
  listeners:
  - name: default
    hostname: "route-purple-jellyfish-grpc-mesh-demo.apps.snoaxolab.axodevelopment.dev"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
